--- a/src/index.css
+++ b/src/index.css
@@ -187,3 +187,14 @@
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) calc(100% - 32px), rgba(0, 0, 0, 0));
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
