--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,13 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: 'Monolisa';
+  src: url('/src/lib/fonts/Monolisa-Font.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 @layer base {
   :root {
 
