--- a/src/components/common/markdown/styles.css
+++ b/src/components/common/markdown/styles.css
@@ -118,9 +118,8 @@
   @apply mb-4 list-decimal text-base;
 }
 
-.markdown code,
-.markdown pre {
-  @apply bg-gray-200 text-black rounded-lg text-xs leading-6;
+.markdown code{
+  @apply bg-gray-200 text-black rounded-lg text-sm leading-6;
 }
 
 .markdown pre {
@@ -195,14 +194,5 @@
   width: 100%;
   height: 100%;
   margin: 0;
-}
-/* 
-.locked-code pre{
-  @apply bg-gray-800;
-} */
-
-.locked-code code{
-  font-size: 1rem;
-  line-height: 1.5rem
 }
 
